--- a/index.css
+++ b/index.css
@@ -61,9 +61,8 @@ button:hover {
 
 .grid-cell {
 	display: inline-block;
-	width: 10%;
-	height: 0;
-	padding-bottom: 10%;
+	border: 1px solid rgb(115, 115, 115);
+	box-sizing: border-box;
 }
 
 .grid-cell-alive {
@@ -71,5 +70,5 @@ button:hover {
 }
 
 .grid-cell-dead {
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: rgb(140, 140, 140);
 }
