--- a/index.css
+++ b/index.css
@@ -29,6 +29,11 @@ button:hover {
 	transform: translate(2px, 2px);
 }
 
+canvas {
+	background-color: white;
+	/*width: 100%;*/
+}
+
 .container {
 	width: 100%;
 }
@@ -53,22 +58,4 @@ button:hover {
 .title {
 	text-align: center;
 	font-size: 2em;
-}
-
-.grid-row {
-	font-size: 0px;
-}
-
-.grid-cell {
-	display: inline-block;
-	border: 1px solid rgb(115, 115, 115);
-	box-sizing: border-box;
-}
-
-.grid-cell-alive {
-	background-color: rgb(255, 255, 255);
-}
-
-.grid-cell-dead {
-	background-color: rgb(140, 140, 140);
 }
