--- a/index.css
+++ b/index.css
@@ -26,31 +26,27 @@ button {
 button:hover {
 	border: 2px solid rgb(102, 224, 255);
 	color: rgb(102, 224, 255);
-	transform: translate(2px, 2px);
-}
-
-canvas {
-	background-color: white;
-	/*width: 100%;*/
+	cursor: pointer;
 }
 
 .container {
 	width: 100%;
 }
 
-.proceed {
+.play {
 	width: 40%;
 	padding-top: 2em;
 	text-align: center;
 	margin: auto;
 }
 
-.button-proceed {
+.button-play {
 	width: 100%;
 	height: 2em;
 }
 
 .container.game {
+	position: relative;
 	width: 40%;
 	margin: 0 auto;
 }
@@ -58,4 +54,19 @@ canvas {
 .title {
 	text-align: center;
 	font-size: 2em;
+}
+
+.canvas-cells {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 0;
+}
+
+.canvas-add {
+	/*background-color: white;*/
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
 }
