--- a/index.css
+++ b/index.css
@@ -11,6 +11,10 @@ h1, h2, h3, h4, h5, h6 {
 	color: rgb(191, 191, 191);
 }
 
+h1, h2 {
+	text-align: center;
+}
+
 p {
 	color: rgb(242, 242, 242);
 }
@@ -18,9 +22,11 @@ p {
 button {
 	border: 2px solid white;
 	border-radius: 5px;
+	height: 2em;
 	background-color: transparent;
 	color: rgb(242, 242, 242);
 	font-size: 1.5em;
+	box-sizing: border-box;
 }
 
 button:hover {
@@ -33,26 +39,52 @@ button:hover {
 	width: 100%;
 }
 
+.container-button {
+	width: 80%;
+	margin: auto;
+}
+
+.container-button + .container-button {
+	margin-top: 1em;
+}
+
 .play {
+	clear: both;
 	width: 40%;
 	padding-top: 2em;
 	text-align: center;
 	margin: auto;
 }
 
+.button-play, .button-clear {
+	width: 40%;
+}
+
 .button-play {
+	margin-right: 10%;
+}
+
+.text-save, .text-load {
 	width: 100%;
-	height: 2em;
+	height: 1em;
+	resize: none;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.button-save, .button-load {
+	margin-top: 1em;
+	width: 100%;
 }
 
 .container.game {
 	position: relative;
 	width: 40%;
-	margin: 0 auto;
+	margin: auto;
+	float: left;
 }
 
 .title {
-	text-align: center;
 	font-size: 2em;
 }
 
@@ -64,9 +96,27 @@ button:hover {
 }
 
 .canvas-add {
-	/*background-color: white;*/
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 1;
+}
+
+.presets {
+	width: 30%;
+	float: left;
+}
+
+.rules {
+	width: 30%;
+	float: right;
+}
+
+button img {
+	vertical-align: middle;
+}
+
+button span {
+	display: inline-block;
+	vertical-align: middle;
 }
