--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ html, body {
 	background-color: rgb(13, 13, 13);
 }
 
-h1, h2, h3, h4, h5, h6, p, button {
+h1, h2, h3, h4, h5, h6, p, button, span {
 	font-family: monospace;
 }
 
@@ -11,12 +11,16 @@ h1, h2, h3, h4, h5, h6 {
 	color: rgb(191, 191, 191);
 }
 
-h1, h2 {
+h1, h2, h3 {
 	text-align: center;
 }
 
-p {
+p, span {
 	color: rgb(242, 242, 242);
+}
+
+p {
+	font-size: 1.2em;
 }
 
 button {
@@ -25,7 +29,7 @@ button {
 	height: 2em;
 	background-color: transparent;
 	color: rgb(242, 242, 242);
-	font-size: 1.5em;
+	font-size: 1.2em;
 	box-sizing: border-box;
 }
 
@@ -44,6 +48,28 @@ button:hover {
 	margin: auto;
 }
 
+.container-size, .container-current-size {
+	width: 80%;
+	margin: auto;
+}
+
+.container-size span, .container-size input {
+	display: inline-block;
+	width: 20%;
+}
+
+.container-current-size {
+	font-size: 1.5em;
+}
+
+.container-size input {
+	margin-bottom: 0.5em;
+}
+
+.button-set-size {
+	width: 100%;
+}
+
 .container-button + .container-button {
 	margin-top: 1em;
 }
@@ -51,17 +77,14 @@ button:hover {
 .play {
 	clear: both;
 	width: 40%;
-	padding-top: 2em;
 	text-align: center;
 	margin: auto;
 }
 
-.button-play, .button-clear {
-	width: 40%;
-}
-
-.button-play {
-	margin-right: 10%;
+.button-advance, .button-advance-once, .button-clear {
+	float: left;
+	margin-left: 5%;
+	width: 25%;
 }
 
 .text-save, .text-load {
@@ -102,13 +125,13 @@ button:hover {
 	z-index: 1;
 }
 
-.presets {
+.options {
 	width: 30%;
 	float: left;
 }
 
 .rules {
-	width: 30%;
+	max-width: 25%;
 	float: right;
 }
 
